fixed overflow bug on active 'what we do' list

--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,8 @@ span.box-right {
 
 #what-we-do ul.active {
     opacity: 1 !important;
-    height: auto !important
+    height: auto !important;
+    overflow: visible
 }
 
 .carousel {
